
- Issue #11062: Fix adding a message from file to Babyl mailbox.

- Issue #15646: Prevent equivalent of a fork bomb when using
  multiprocessing on Windows without the "if __name__ == '__main__'"
  idiom.

- Issue #15678: Fix IDLE menus when started from OS X command line
  (3.3.0b2 regression).

C API
-----

Extension Modules
-----------------

Tools/Demos
-----------

Documentation
-------------

- Issue #14674: Add a discussion of the json module's standard compliance.
  Patch by Chris Rebert.

- Create a 'Concurrent Execution' section in the docs, and split up the
  'Optional Operating System Services' section to use a more user-centric
  classification scheme (splitting them across the new CE section, IPC and
  text processing). Operating system limitatons can be reflected with
  the Sphinx :platform: tag, it doesn't make sense as part of the Table of
  Contents.

- Issue #4966: Bring the sequence docs up to date for the Py3k transition
  and the many language enhancements since they were original written

- The "path importer" misnomer has been replaced with Eric Snow's
  more-awkward-but-at-least-not-wrong suggestion of "path based finder" in
  the import system reference docs

- Issue #15640: Document importlib.abc.Finder as deprecated.

- Issue #15630: Add an example for "continue" stmt in the tutorial. Patch by
  Daniel Ellis.

Tests
-----

- Issue #15747: ZFS always returns EOPNOTSUPP when attempting to set the
  UF_IMMUTABLE flag (via either chflags or lchflags); refactor affected
  tests in test_posix.py to account for this.

- Issue #15285: Refactor the approach for testing connect timeouts using
  two external hosts that have been configured specifically for this type
  of test.

- Issue #15743: Remove the deprecated method usage in urllib tests. Patch by
  Jeff Knupp.

- Issue #15615: Add some tests for the json module's handling of invalid
  input data.  Patch by Kushal Das.

Build
-----

- Output lib files for PGO build into PGO directory.
